nextcloud-compose/app-deploymentconfig.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: app
  name: app
spec:
  replicas: 1
  selector:
    io.kompose.service: app
  strategy:
    resources: {}
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.network/nextcloud_network: "true"
        io.kompose.service: app
    spec:
      containers:
        - env:
            - name: MYSQL_HOST
              value: db
          image: ' '
          name: nextcloud-app
          ports:
            - containerPort: 80
          resources: {}
          volumeMounts:
            - mountPath: /var/www/html
              name: nextcloud
            - mountPath: /var/www/html/config
              name: app-claim1
            - mountPath: /var/www/html/custom_apps
              name: app-claim2
            - mountPath: /var/www/html/data
              name: app-claim3
            - mountPath: /var/www/html/themes
              name: app-claim4
            - mountPath: /etc/localtime
              name: app-claim5
              readOnly: true
      hostname: nextcloud.local
      restartPolicy: Always
      volumes:
        - name: nextcloud
          persistentVolumeClaim:
            claimName: nextcloud
        - name: app-claim1
          persistentVolumeClaim:
            claimName: app-claim1
        - name: app-claim2
          persistentVolumeClaim:
            claimName: app-claim2
        - name: app-claim3
          persistentVolumeClaim:
            claimName: app-claim3
        - name: app-claim4
          persistentVolumeClaim:
            claimName: app-claim4
        - name: app-claim5
          persistentVolumeClaim:
            claimName: app-claim5
            readOnly: true
  test: false
  triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
          - nextcloud-app
        from:
          kind: ImageStreamTag
          name: app:latest
      type: ImageChange
status:
  availableReplicas: 0
  latestVersion: 0
  observedGeneration: 0
  replicas: 0
  unavailableReplicas: 0
  updatedReplicas: 0
