nextcloud-compose/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yaml
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/nextcloud_network: "true"
        io.kompose.service: db
    spec:
      containers:
        - image: mariadb
          name: nextcloud-mariadb
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: db
            - mountPath: /etc/localtime
              name: db-claim1
              readOnly: true
      hostname: db.local
      restartPolicy: Always
      volumes:
        - name: db
          persistentVolumeClaim:
            claimName: db
        - name: db-claim1
          persistentVolumeClaim:
            claimName: db-claim1
            readOnly: true
status: {}
