nextcloud-compose/db-deploymentconfig.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    io.kompose.service: db
  strategy:
    resources: {}
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.network/nextcloud_network: "true"
        io.kompose.service: db
    spec:
      containers:
        - image: ' '
          name: nextcloud-mariadb
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: db
            - mountPath: /etc/localtime
              name: db-claim1
              readOnly: true
      hostname: db.local
      restartPolicy: Always
      volumes:
        - name: db
          persistentVolumeClaim:
            claimName: db
        - name: db-claim1
          persistentVolumeClaim:
            claimName: db-claim1
            readOnly: true
  test: false
  triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
          - nextcloud-mariadb
        from:
          kind: ImageStreamTag
          name: db:latest
      type: ImageChange
status:
  availableReplicas: 0
  latestVersion: 0
  observedGeneration: 0
  replicas: 0
  unavailableReplicas: 0
  updatedReplicas: 0
